// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders 1`] = `
<div>
  <button
    class="btn waves-effect waves-light"
  >
    Stuff
  </button>
</div>
`;

exports[`Button with a disabled prop has disabled class and disabled attribute 1`] = `
<div>
  <button
    class="btn disabled"
    disabled=""
  >
    Stuff
  </button>
</div>
`;
